Fav icon implementation, done

--- a/styles.css
+++ b/styles.css
@@ -281,3 +281,7 @@ p {
             mask-image: linear-gradient(to right, transparent 0, #000 18px, #000 calc(100% - 18px), transparent 100%);
   }
 }
+
+.title-gold {
+  color: var(--gold);
+}
